--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -3059,5 +3059,5 @@ color: #e50000;
 background: #fffed5;
 text-align: center;
 font-size: 13px;float:left;width:100%;
-border: 1px solid #e4e3ba;}
+border: 1px solid #e4e3ba;position: relative;z-index: 11;}
 .cs-save-errors span{color:#222;font-size:22px;font-weight: normal;}
