--- a/www.newbidder.com/css/style.css
+++ b/www.newbidder.com/css/style.css
@@ -178,36 +178,49 @@ a:hover,a:focus{text-decoration:none;color:#357cf4;}
 .title{font-size:32px;text-align:center;margin:80px 0 100px 0;line-height:48px;}
 .pricing-box{margin:0 auto 80px auto;}
 .pricing-box li{-webkit-transition: all 0.3s;
-    transition: all 0.3s;width:24.15%;border-style:solid;border-width:3px 2px 2px 2px;border-color:#357cf3 #fbfbfb #fbfbfb #fbfbfb;background:#fbfbfb;float:left;box-shadow:0 0 3px #d4d4d4;margin:0 1.13333% 0 0;border-radius:2px;height:510px;padding-top:15px;}
+    transition: all 0.3s;width:24.15%;background:#fbfbfb;float:left;box-shadow:0 0 3px #d4d4d4;margin:0 1.13333% 0 0;border-radius:2px;height:520px;}
 .pricing-box li:nth-last-child(1){margin:0;}
 .pricing-box li.h-line{border-top:3px solid #ff8c00;}
 .pricing-box li.h-line .money-size,.pricing-box li.h-line .money-icon{color:#ff8c00;}
+.pricing-box li.h-line2{border-top:3px solid #357cf3;}
+.pricing-box li.h-line2 .money-size,.pricing-box li.h-line3 .money-icon{color:#357cf3;}
 .pricing-box li.h-line3{border-top:3px solid #00aa83;}
 .pricing-box li.h-line3 .money-size,.pricing-box li.h-line3 .money-icon{color:#019170;}
 .pricing-box li.h-line4{border-top:3px solid #04a3c0;}
 .pricing-box li.h-line4 .money-size,.pricing-box li.h-line4 .money-icon{color:#04a3c0;}
-.p-header{margin:25px 0 20px 0;}
+.p-header{margin:0;}
 .p-header-box{text-align:center;}
-.p-header-box h2{font-size:15px;color:#666;}
+.p-header-box h2{font-size:15px;margin:0;height:30px;line-height:30px;color:#fff;}
+.h-line2 .p-header-box h2{background:#357cf3;}
+.h-line3 .p-header-box h2{background:#00aa83;}
+.h-line4 .p-header-box h2{background:#04a3c0;}
 .p-header .money-icon{color:#357cf3;font-size:18px;vertical-align:top;line-height:24px;font-weight:600;}
 .p-header .money-size{color:#357cf3;font-size:42px;line-height:42px;font-weight:bold;}
 .p-header .money-small{color:#666;}
-
+.pricing-box .p-header.p-header2{position:relative;margin:25px 0 5px 0;}
+.pricing-box .p-header.p-header2 .line{height:110px;width:3px;display:block;background:#aaa;position:absolute;left:50%;top:-35px;
+    transform:rotate(-80deg);
+    -ms-transform:rotate(-80deg); /* Internet Explorer */
+    -moz-transform:rotate(-80deg); /* Firefox */
+    -webkit-transform:rotate(-80deg); /* Safari 和 Chrome */
+    -o-transform:rotate(-80deg); /* Opera */}
+.pricing-box .p-header.p-header2 .money-size{color:#aaa;font-size:34px;}
+.pricing-box .p-header.p-header2 .money-icon{color:#aaa;font-size:14px;}
+.pricing-box .p-header.p-header2 .money-small{color:#aaa;}
 .pricedesc{margin:5px 0 0 0;}
 .pricedesc p{line-height:20px;font-size:14px;margin:2px 0 5px 0;color:#222;font-weight:500;}
 .pricedesc p i{margin:0 5px;}
-.free-green .pricedesc-list{height:255px;}
+.free-green .pricedesc-list{height:290px;}
 .free-green .p-btn.p-btn-01{border:2px solid #fff;background:#fff;color:#019170;}
-.pricedesc-list{border-top:1px solid #f3f3f3;margin:30px auto;display:inline-block;width:88%;height:195px;}
+.pricedesc-list{border-top:1px solid #f3f3f3;margin:30px auto;display:inline-block;width:88%;height:190px;}
 .pricedesc-list li{line-height:20px;background:transparent;padding:10px 0;font-size:12px;color:#222;width:100%;border-width:0 0 1px 0;border-style:solid;border-color:#f3f3f3;box-shadow:none;border-radius:0;height:auto;font-weight:400;}
 .pricedesc-list li:nth-last-child(1),.pricedesc-list li:nth-last-child(1):hover{border-bottom:none;}
-
 .pricedesc-list li:hover{border-width:0 0 1px 0;border-style:solid;border-color:#f3f3f3;}
 .pricedesc-list li i{margin:0 5px;color:#494949;}
 .pricedesc-list .hg{line-height:normal;padding:8px 0;}
 .pricedesc-list .hg em{font-size:24px;color:#999;}
 .p-btn{border-radius:2px;background:#357cf3;-webkit-transition-duration: 0.6s; /* Safari */
-    transition-duration: 0.6s;height:38px;line-height:38px;padding:0 15px 0 25px;font-size:13px;border:2px solid #357cf3;font-weight:500;color:#fff;}
+    transition-duration: 0.6s;height:38px;line-height:35px;padding:0 15px 0 25px;font-size:14px;border:2px solid #357cf3;font-weight:500;color:#fff;}
 .p-btn:hover{background:#357cf3;color:#fff;border:2px solid #357cf3;}
 .p-btn.p-btn-01:hover{background:#ff8c00;color:#fff;border:2px solid #ff8c00;}
 .p-btn.p-btn-03:hover{background:#00aa83;color:#fff;border:2px solid #00aa83;}
@@ -414,7 +427,45 @@ input {outline: none;}
 .sign-box{display:none;}
 .nav-box ul.sign-box{margin:50px -10px 0 0;}
 .nav-box ul.sign-box li a{height:38px;line-height:38px;padding:0 15px;}
-@-webkit-keyframes animate-positive{0% {width: 0;}}
+#main {
+    height:auto;
+    text-align:center;
+}
+#fullbg {
+    background-color:#000;
+    left:0;
+    opacity:0.6;
+    position:absolute;
+    top:0;
+    filter:alpha(opacity=60);
+    -moz-opacity:0.6;
+    -khtml-opacity:0.6;
+    z-index:9999;
+}
+#dialog {
+    padding:1px;
+    margin:0 auto;
+    position:fixed !important;
+    left:10%;
+    top:15%;
+    width:80%;height:80%;
+    z-index:99999;
+    border-radius:5px;
+    display:none;
+}
+.tutorial-box{background:url("../img/mac-bg.png") no-repeat;width:80%;background-size:100%;height:450px;margin:0 auto;}
+#dialog p.close {width:40px;height:40px;margin:0 auto;position:absolute;bottom:20px;left:48.33333%;background:#333;border-radius:100%;}
+#dialog p.close i{font-size:18px;line-height:40px;text-shadow:none;}
+#dialog p.close a {color:#fff;text-decoration:none;}
+.tutorial-box .carousel-inner{width:73.3333%;margin:0 auto;overflow:hidden;}
+.carousel-indicators{bottom:-90px;}
+.carousel-indicators li{margin:0 3px;}
+.carousel-indicators li.active{margin:0 3px;}
+.tutorial-box img{width:100%;height:100%;border-radius:3px;padding-top:16px;}
+.carousel-control.right,.carousel-control.left{background-image:none;padding-top:140px;font-size:60px;}
+.carousel-control.right{text-align:right;right:0;}
+.carousel-control.left{text-align:left;}
+@-webkit-keyframes animate-positive{0% {width:0;}}
 @keyframes animate-positive{0% {width: 0;}}
 @media only screen and (max-width:1200px){.banner-col h1,.banner-col-r{padding-right:90px;}}
 @media only screen and (max-width:1100px){
@@ -458,7 +509,7 @@ input {outline: none;}
     .swiper-container li{width:52%;}
     .bider-menu-nr{margin-top:100px;}
     .banner-col-r ul{width:100%;}
-    .free-green .pricedesc-list{height:auto;max-height:auto;}
+    .free-green .pricedesc-list{height:auto;max-height:100%;}
 }
 @media only screen and (max-width:405px){
     .footer-box .col-xs-12{width:100%;}
