--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -1201,10 +1201,14 @@ table.md-table tr.md-row.first-tree td.md-cell:first-child{
     color: #000;
     line-height:23px;margin-bottom:3px;
 }
-.data-num.red{
+.data-num.red,
+table.md-table td.md-cell.red,
+table.md-table tbody.md-body > tr.md-row:hover td.md-cell.red{
     color: red;
 }
-.data-num.green{
+.data-num.green,
+table.md-table td.md-cell.green,
+table.md-table tbody.md-body > tr.md-row:hover td.md-cell.green{
     color: green;
 }
 .data-num small{font-weight:600;;margin:-2px 3px 0 0;line-height:32px;float:left;}
@@ -2729,6 +2733,8 @@ table.md-table thead.md-head > tr.md-row{height: auto;}
 table.md-table tbody.md-body > tr.md-row, table.md-table tfoot.md-foot > tr.md-row{height:33px;}
 .layout-column > .flex, .layout-sm-column > .flex{background:#fff;}
 .navbar-right .dropdown-menu{top:46px;right:0;padding:0;border-radius:4px;overflow:hidden;}
+.w{min-width: 200px;width: auto;}
+
 .navbar-right .dropdown-menu a{border:0;}
 .md-button{min-height:32px;height:32px;min-width:62px;font-size: 12px;font-weight: 600;color:#fff;}
 .md-button i{margin-right:3px;}
