--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -3070,7 +3070,7 @@ md-menu-content.md-default-theme .md-menu>.md-button:after, md-menu-content .md-
 md-checkbox .md-icon{width:18px;height:18px;border-radius:2px;margin-top:17px;}
 .condition-checkbox md-checkbox .md-icon{margin-top: 0px;}
 md-checkbox:not([disabled]).md-primary.md-checked .md-icon{background:#2770ea;}
-.dropdown-menu > li > a:hover{background-color:#8494a2 !important;font-weight:bold;color:#fff;}
+.dropdown-menu > li > a:hover{background-color:#8494a2 !important;color:#fff;}
 .cs-conditions .dropdown-menu,.md-autocomplete-suggestions {border:none;border-radius:3px;background: rgba(246, 248, 248, 0.97)!important;background:#fff;
     box-shadow:0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);}
 md-autocomplete .md-show-clear-button button{width:22px;height:22px;margin:auto 0;}
