--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -2917,6 +2917,7 @@ input[type=password]:disabled, input[type=radio]:disabled, input[type=text]:disa
 .navbar-right{min-height:46px;height:46px;line-height:46px;}
 .navbar-right li a{height:46px;color:#000;padding:11px 15px 11px 15px;}
 .navbar-right i{margin-right:5px;}
+.navbar-right .icon-question-sign{font-size:16px;margin-top:3px;float:left;}
 .fonts15{font-size:15px;}
 .fonts16{font-size:16px;}
 .fonts17{font-size:17px;}
