--- a/Front/src/assets/css/style.css
+++ b/Front/src/assets/css/style.css
@@ -64,7 +64,7 @@ body {
 .pricing-box .my-price{-webkit-transition: all 0.3s;
     transition: all 0.3s;background:#f6f8f8;box-shadow:0 0 3px #d4d4d4;border-radius:2px;padding:15px 0 30px 0;}
 .pricing-box li{-webkit-transition: all 0.3s;
-    transition: all 0.3s;background:#f6f8f8;margin:0 1.13333% 0 0;border-radius:3px;height:auto;padding:0 0 20px 0;
+    transition: all 0.3s;background:#f6f8f8;margin:0 1.13333% 0 0;border-radius:3px;height:500px;padding:0 0 20px 0;
     box-shadow:0 1px 1px 0 rgba(0, 0, 0, 0.1),
     0 1px 1px 0 rgba(0, 0, 0, 0.1),
     0 1px 1px 0 rgba(0, 0, 0, 0.1);}
@@ -82,23 +82,25 @@ body {
 .edit-pricing-box li.h-line{border-top:2px solid #ff8c00;}
 .edit-pricing-box li.h-line:hover{-webkit-transform: scale(1,1);transform: scale(1,1);border:2px solid #ff8c00;}
 .edit-pricing-box li.h-line .money-size,.edit-pricing-box li.h-line .money-icon{color:#ff8c00;}
-.p-header{margin:25px 0 20px 0;}
+.p-header{margin:5px 0 20px 0;}
 .p-header-box{text-align:center;}
 .p-header-box h2{font-size:16px;color:#b3b3b3;margin:15px 0 0 0;}
 .p-header .money-icon{color:#357cf3;font-size:18px;vertical-align:top;line-height:24px;}
 .p-header .money-size{color:#357cf3;font-size:42px;line-height:42px;}
 .p-header .money-small{color:#b3b3b3;}
-
-.p-header.p-header2{color:#999;}
-.p-header.p-header2 .money-size,.p-header.p-header2 .money-icon{color:#95a4b5;}
-.p-header.p-header2 .money-size{text-decoration:line-through}
+.pricing-box .p-header.p-header2{position:relative;margin:25px 0 5px 0;}
+.pricing-box .p-header.p-header2 .line{height:110px;width:3px;display:block;background:#aaa;position:absolute;left:50%;top:-45px;
+    transform:rotate(-80deg);
+    -ms-transform:rotate(-80deg); /* Internet Explorer */
+    -moz-transform:rotate(-80deg); /* Firefox */
+    -webkit-transform:rotate(-80deg); /* Safari 和 Chrome */
+    -o-transform:rotate(-80deg); /* Opera */}
+.pricing-box .p-header.p-header2 .money-size{color:#aaa;font-size:34px;}
+.pricing-box .p-header.p-header2 .money-icon{color:#aaa;font-size:14px;}
+.pricing-box .p-header.p-header2 .money-small{color:#aaa;}
 .edit-pricing-box .col-md-8.my-price-l{color:#333;border:none;padding-right:20px;}
 .edit-pricing-box .my-price-l:hover,.p-pay li:hover{border:none;}
 .edit-pricing-box .col-md-8{padding:0;}
-
-.p-header.p-header2{color:#999;}
-.p-header.p-header2 .money-size,.p-header.p-header2 .money-icon{color:#95a4b5;}
-.p-header.p-header2 .money-size{text-decoration:line-through}
 .edit-pricing-box .my-price-l:hover,.p-pay li:hover{border:none;}
 .edit-pricing-box .col-md-8{padding:0;}
 .p-edit{margin-bottom:20px;}
@@ -124,11 +126,13 @@ body {
 .p-header .money-size{color:#357cf3;font-size:40px;line-height:40px;font-weight:600;}
 .p-header .money-small{color:#666;margin-right:3px;}
 
+.h-line0 .p-header{margin-top:25px;}
+.h-line0 .pricedesc-list{height:250px;}
 .pricedesc{margin:5px 0 0 0;}
 .pricedesc p{line-height:20px;font-size:14px;margin:2px 0 5px 0;color:#000;font-weight:500;}
 .pricedesc p i{margin:0 5px;}
 .pricedesc-list{border-top:1px solid #f3f3f3;margin:10px auto 0 auto;display:inline-block;width:100%;font-weight:500;height:210px;padding:0 10px;}
-.pricedesc-list li{background:transparent;font-size:13px;color:#000;width:100%;border-width:0 0 1px 0;border-style:solid;border-color:#eee;box-shadow:none;border-radius:0;display: table;vertical-align: middle;text-align:center;padding:10px 0;}
+.pricedesc-list li{background:transparent;height:34px;font-size:13px;color:#000;width:100%;border-width:0 0 1px 0;border-style:solid;border-color:#eee;box-shadow:none;border-radius:0;display: table;vertical-align: middle;text-align:center;padding:10px 0;}
 .pricedesc-list li:hover{border-width:0 0 1px 0;border-style:solid;border-color:#f3f3f3;}
 .pricedesc-list li i{margin:0 5px;color:#494949;}
 .pricedesc-list .hg{line-height:normal;height:42px;}
@@ -192,6 +196,7 @@ body {
     .trk-md-img{display: none;}
     .trk-img{display: block;}
     .pricing-box .li-con{width:100%}
+    .change-paln-dialog .change-paln-dialog-content .li-con{width:48%;}
 }
 @media only screen and (max-width:640px){.pricing-box .w-md3{width:100%;}}
 @media only screen and (max-width:540px){
@@ -206,6 +211,7 @@ body {
     .nav-box ul li{float:left;margin-left:20px;}
     .nav-box ul li a{cursor:pointer;color:#333;display:inline-block;font-size:12px;}
     .nav-box ul li a:hover{color:#357cf3;}
+    .change-paln-dialog .change-paln-dialog-content .li-con{width:100%;}
 
 }
 @media only screen and (max-width:405px){
