--- a/www.newbidder.com/css/style.css
+++ b/www.newbidder.com/css/style.css
@@ -92,7 +92,7 @@ a:hover,a:focus{text-decoration:none;color:#357cf4;}
 .banner-col-r{font-family:"Avenir Next", Verdana, Helvetica, Tahoma, Arial, "\5b8b\4f53", sans-serif;float:right;padding-right:115px;}
 .banner-col h1{font-size:32px;text-align:right;margin:30px 0;display:block;padding-top:10px;color:#868e96;font-weight:600;padding-right:115px;}
 .banner-col h1 b{color:#000;}
-.banner-col-r ul{text-align:right;color:#fff;font-size:17px;float:right;width:50%;}
+.banner-col-r ul{text-align:right;color:#fff;font-size:18px;float:right;width:55%;}
 .banner-col-r ul li{float:right;background:#357cf4;padding:8px 12px;margin-bottom:8px;}
 .banner-col-r ul li.active{background:#00aa83;}
 
@@ -442,9 +442,9 @@ input {outline: none;}
 .carousel-control:hover,.carousel-control:focus{color:#357cf4;opacity:1.0}
 .carousel-control.right{text-align:right;right:0;}
 .carousel-control.left{text-align:left;}
-#googleMap {
+#googleMap {margin-top:30px;
      width: 100%;
-     height: 220px;margin-top:50px;}
+     height:230px;}
 .jumbo{float:left;text-align:center;
     width: 100%;
     margin:30px 0 0 0;
@@ -502,6 +502,7 @@ input {outline: none;}
 .jump-off em{float:right;font-style:normal;}
 .jumbo-btn{background:#1d79ff;border-radius:50px;border:none;height:46px;line-height:46px;width:200px;font-size:20px;color:#fff;margin-top:10px;box-shadow:12px 20px 20px rgba(36,37,38,0.1);}
 .jumbo-btn i{margin-right:12px;}
+.jumbo-btn:focus{outline:0;}
 @-webkit-keyframes animate-positive{0% {width:0;}}
 @keyframes animate-positive{0% {width: 0;}}
 @media only screen and (max-width:1200px){.banner-col h1,.banner-col-r{padding-right:90px;}}
