--- a/www.newbidder.com/css/style.css
+++ b/www.newbidder.com/css/style.css
@@ -180,13 +180,17 @@ a:hover,a:focus{text-decoration:none;color:#357cf4;}
     transition: all 0.3s;width:24.15%;background:#fbfbfb;float:left;box-shadow:0 0 3px #d4d4d4;margin:0 1.13333% 0 0;border-radius:2px;height:520px;}
 .pricing-box li:nth-last-child(1){margin:0;}
 .pricing-box li.h-line{border-top:3px solid #ff8c00;}
-.pricing-box li.h-line .money-size,.pricing-box li.h-line .money-icon{color:#ff8c00;}
+.pricing-box li.h-line .p-header .money-size,.pricing-box li.h-line .p-header .money-icon{color:#ff8c00;}
 .pricing-box li.h-line2{border-top:3px solid #357cf3;}
-.pricing-box li.h-line2 .money-size,.pricing-box li.h-line3 .money-icon{color:#357cf3;}
+.pricing-box li.h-line2 .p-header .money-size,.pricing-box li.h-line3 .p-header .money-icon{color:#357cf3;}
 .pricing-box li.h-line3{border-top:3px solid #00aa83;}
-.pricing-box li.h-line3 .money-size,.pricing-box li.h-line3 .money-icon{color:#019170;}
+.pricing-box li.h-line3 .p-header .money-size,.pricing-box li.h-line3 .p-header .money-icon{color:#019170;}
 .pricing-box li.h-line4{border-top:3px solid #04a3c0;}
-.pricing-box li.h-line4 .money-size,.pricing-box li.h-line4 .money-icon{color:#04a3c0;}
+.pricing-box li.h-line4 .p-header .money-size,.pricing-box li.h-line4 .p-header .money-icon{color:#04a3c0;}
+.pricing-box li.h-line .p-header.p-header2 .money-size,.pricing-box li.h-line2 .p-header.p-header2 .money-size,.pricing-box li.h-line3 .p-header.p-header2 .money-size,.pricing-box li.h-line4 .p-header.p-header2 .money-size,
+.pricing-box li.h-line .p-header.p-header2 .money-icon,.pricing-box li.h-line2 .p-header.p-header2 .money-icon,.pricing-box li.h-line3 .p-header.p-header2 .money-icon,.pricing-box li.h-line4 .p-header.p-header2 .money-icon,
+.pricing-box li.h-line .p-header.p-header2 .money-small,.pricing-box li.h-line2 .p-header.p-header2 .money-small,.pricing-box li.h-line3 .p-header.p-header2 .money-small,.pricing-box li.h-line4 .p-header.p-header2 .money-small
+{color:#aaa;}
 .p-header{margin:0;}
 .p-header-box{text-align:center;}
 .p-header-box h2{font-size:15px;margin:0;height:30px;line-height:30px;color:#fff;}
@@ -196,16 +200,16 @@ a:hover,a:focus{text-decoration:none;color:#357cf4;}
 .p-header .money-icon{color:#357cf3;font-size:18px;vertical-align:top;line-height:24px;font-weight:600;}
 .p-header .money-size{color:#357cf3;font-size:42px;line-height:42px;font-weight:bold;}
 .p-header .money-small{color:#666;}
-.pricing-box .p-header.p-header2{position:relative;margin:25px 0 5px 0;}
-.pricing-box .p-header.p-header2 .line{height:110px;width:3px;display:block;background:#aaa;position:absolute;left:50%;top:-35px;
+.pricing-box .p-header2{position:relative;margin:25px 0 5px 0;}
+.pricing-box .p-header2 .line{height:110px;width:3px;display:block;background:#aaa;position:absolute;left:50%;top:-35px;
     transform:rotate(-80deg);
     -ms-transform:rotate(-80deg); /* Internet Explorer */
     -moz-transform:rotate(-80deg); /* Firefox */
     -webkit-transform:rotate(-80deg); /* Safari 和 Chrome */
     -o-transform:rotate(-80deg); /* Opera */}
-.pricing-box .p-header.p-header2 .money-size{color:#aaa;font-size:34px;}
-.pricing-box .p-header.p-header2 .money-icon{color:#aaa;font-size:14px;}
-.pricing-box .p-header.p-header2 .money-small{color:#aaa;}
+.pricing-box .p-header2 .money-size{font-size:34px;font-weight:bold}
+.pricing-box .p-header2 .money-icon{font-size:14px;vertical-align:top;}
+.pricing-box .p-header2 .money-small{font-size:14px;}
 .pricedesc{margin:5px 0 0 0;}
 .pricedesc p{line-height:20px;font-size:14px;margin:2px 0 5px 0;color:#222;font-weight:500;}
 .pricedesc p i{margin:0 5px;}
