--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -3110,8 +3110,8 @@ md-autocomplete .md-show-clear-button button{width:22px;height:22px;margin:auto 
   width: 100%;
   bottom: 78px;
   text-align: center;
-  left: 0;
-  font-size: 16px;
+  left: 0;font-family:sans-serif;
+  font-size: 18px;font-weight:bold;
 }
 
 .cs-save-errors{margin:10px 0;padding:10px 0 15px 0;border-radius:2px;
