--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -88,6 +88,7 @@ header.navbar {
     width: 100%;
     background:#fff;
     color: #fff;
+    border-bottom:1px solid #bbb;
 }
 
 .free-btn{
@@ -2150,7 +2151,6 @@ input[type="checkbox"].th-checkbox{
 }
 md-content.cs-main-content{
     height: calc(100% - 93px);
-    overflow-y: hidden;
 }
 .cs-page-flow,
 .cs-flow-content{
@@ -2923,7 +2923,7 @@ input[type=password]:disabled, input[type=radio]:disabled, input[type=text]:disa
 .nav-col i.mtop2{margin:14px 5px 0 0;}
 
 .navbar-box{min-height:46px;height:46px;}
-.navbar-box a{line-height:46px;height:46px;margin-top:-1px;border-left:1px solid #d5d5d5;background:#fff;}
+.navbar-box a{line-height:45px;height:45px;margin-top:-1px;border-left:1px solid #d5d5d5;background:#fff;}
 .navbar-box a:hover{
     background: #f6f8f8;
     background: -moz-linear-gradient(top, #e9e9e9 0, #fff 100%);
