--- a/Front/src/assets/css/ts-offer-report.css
+++ b/Front/src/assets/css/ts-offer-report.css
@@ -24,3 +24,8 @@
 .load-progress-box .load-progress-content h2 {
   color: #777;
 }
+
+.right-select .cs-add-button.blue-btn[disabled] {
+    background: #a09b9b!important;
+    border: 1px solid #868484!important;
+}
