--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -353,15 +353,15 @@ md-datepicker {
     border-radius: 0;
 }
 .change-paln-dialog {
-  width: 1024px;max-width: 100%;height: 652px;
+  width: 1024px;max-width: 100%;
 }
 .change-paln-dialog .change-paln-dialog-content {
   padding-bottom: 5px;
-  height: 600px;
 }
 .change-paln-dialog .change-paln-dialog-content .note {
-  margin: 0;
-  padding-top: 5px;
+  margin: 15px auto 0;
+  font-weight: 700;
+  width: 80%;
 }
 .change-paln-dialog .change-paln-dialog-content > .pricing-box {
   margin: 0;
@@ -1455,6 +1455,9 @@ h1.setting-title p{line-height:26px;color:#333;font-weight:normal;margin-bottom:
 }
 .table tbody tr{
     background: #fff
+}
+.table tbody tr.campaign-tr{
+    cursor: pointer;
 }
 .table tbody tr:nth-child(2n+2){
     background: #f8f8f8;
